; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_pointer_handle_leave.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_pointer_handle_leave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl_pointer = type { i32 }
%struct.wl_surface = type { i32 }
%struct.vo_wayland_state = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@MP_KEY_MOUSE_LEAVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_pointer*, i32, %struct.wl_surface*)* @pointer_handle_leave to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pointer_handle_leave(i8* %0, %struct.wl_pointer* %1, i32 %2, %struct.wl_surface* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.wl_pointer*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.wl_surface*, align 8
  %9 = alloca %struct.vo_wayland_state*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.wl_pointer* %1, %struct.wl_pointer** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.wl_surface* %3, %struct.wl_surface** %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.vo_wayland_state*
  store %struct.vo_wayland_state* %11, %struct.vo_wayland_state** %9, align 8
  %12 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %9, align 8
  %13 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @MP_KEY_MOUSE_LEAVE, align 4
  %18 = call i32 @mp_input_put_key(i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @mp_input_put_key(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
